website/css/main.css
/* ==========================================================================
   Author's custom styles
   ========================================================================== */

div.warning {
	position: fixed;
	background-color: #000000;
	color: #ffffff;
	padding: 15px;
	border: #ffffff 2px solid;
}

body {
	background-color: #000000;
	background-repeat:no-repeat;
	background-attachment:fixed;
	background-position:center; 
}

a {
	color: #003399;
}

a :hover{
	color: #0044aa;
}

.row {
  color: inherit;
  padding: 30px;
  background-color: rgba(255,255,255,0.6);
  margin-left: 0px;
}

[class*="span"] {
	margin-left: 0px;
}

.rounded  {
  -webkit-border-radius: 6px;
     -moz-border-radius: 6px;
          border-radius: 6px;
}

.inverted {
	background-color: rgba(0,0,0,0.5);
	color: #eeeeee;
}

.candidate {
	padding: 5px;
	margin: 15px;
	text-align: center;
	background-color: rgba(255,255,255,0.5);
}

.frontblurb {
	margin-right: 35px;
}

.coverview {
	text-align: left;
	background-color: rgba(255,255,255,0.5);
	padding: 10px;
	margin: 5px;
}

hr {
	border-top: 1px solid #444444;
	border-bottom: 0px solid #555555;
}

img.rounded {
	/*border: 2px solid #ffffff;*/
}

.navbar-inverse .navbar-inner {
	background-image: -moz-linear-gradient(top, #333333, #111111);
	background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#333333), to(#111111));
	background-image: -webkit-linear-gradient(top, #333333, #111111);
	background-image: -o-linear-gradient(top, #333333, #111111);
	background-image: linear-gradient(to bottom, #333333, #111111);
	border-color: #333333;
}

 .contents{
	background-color: rgba(255,255,255,0.15);
	padding: 30px;
	color: #222222;
}

.hero-unit {
	color: #eeeeee;
	background-color: #333333;
	background-image: url('../img/caldariheader.jpg');
}

.hero-unit a {
	color: #77aaff;
}

.bold {
	font-weight: bold;
}

.green {
	color: #006600;
}

.red {
	color: #660000;
}
	
h2 {
	color: #660000;
}

table {
	background-color: rgba(255,255,255,0.8);
	border-collapse: collapse;
	border: 1px solid #888888;
}

td {
	border: 1px solid #888888;
}

td.question {
	padding-left: 10px;
	min-width: 360px;
	width: 360px;
	font-size: 9pt;
}

td.answer {
	text-align: center;
	vertical-align: middle;
}	

tr.header {
	background-color: rgba(0,0,0,0.3);
}

tr.even {
	background-color: rgba(0,0,0,0.1);
}

tr.qrow:hover{
	background-color: rgba(0,64,255,0.2);
}

th {
	vertical-align: bottom;
	text-align: center;
	font-weight: normal;
	font-size: 9pt;
	border: 1px solid #888888;
	padding: 3px;
}

th.even {
	background-color: rgba(255,255,255,0.3);
}

th.answer {
	vertical-align: top;
	width: 75px;	
	min-width: 75px;
}

div.check {
	position: absolute;
}

div.buttons {
	text-align: right;
	position: relative;
}

div.questionbuttons {
	position: absolute;
	display:none;
}

div.candidatebuttons {
	position: absolute;
	left: 140px;
	display:none;
}

div.buttonpanel {
	background-color: rgba(0,0,0,0.5);
	border: 1px solid #bbbbbb;
	width: 250px;
	padding: 10px;
	margin: 5px;
	z-index:10;
	box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2);
}

div.buttonpanel a {
	margin: 5px;
	width: 210px;
}

div.buttonholder {
	position: relative;
}

input[type="text"] {
	width: 20px;
	padding: 2px;
	margin: 2px;
}

.btnsmall {
	padding: 2px 5px;
	font-size: 14px;
	line-height:15px;
	font-weight: bold;
}

.verybad {
	background: #dd0000;
}

.bad {
	background: #dd8800;
}

.neutral {
	background: #cccccc;
}

.good {
	background: #6699dd;
}

.verygood {
	background: #2266ff;
}

.comment {
	background-image: url('../img/balloon.png');
}

